# cpp_programming_principles

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  README.md
src/GUI/: GUI.cpp  Graph.cpp  Graphics.cpp  README.md  Simple_window.cpp  Window.cpp
src/calculator_utils/: README.md  calculator.cpp  token_stream.cpp
src/ch_02_hello_world/: CMakeLists.txt  README.md  ch_02_02_hello_world.cpp  ch_02_06_hello_world_keep_open.cpp
src/ch_03_objects_types_values/: CMakeLists.txt  README.md  ch_03_01_string_io.cpp  ch_03_02_type_io.cpp  ch_03_03_01_formatted_io.cpp  ch_03_03_02_formatted_io.cpp  ch_03_03_03_formatted_io.cpp  ch_03_04_00_string_concatenation.cpp  ch_03_04_01_string_comparison.cpp  ch_03_04_02_string_concatenation.cpp  ch_03_04_03_floating_point_io.cpp  ch_03_05_00_assignment_and_initialization.cpp  ch_03_05_01_detect_repeated_words.cpp  ch_03_06_01_find_repeated_words.cpp  ch_03_07_names.cpp  ch_03_08_types_and_objects.cpp  ch_03_09_01_safe_conversions.cpp  ch_03_09_02_01_unsafe_conversions.cpp  ch_03_09_02_02_unsafe_conversions.cpp
src/ch_04_computation/: CMakeLists.txt  README.md  ch_04_03_00_int_expressions.cpp  ch_04_03_01_const_and_constexp.cpp  ch_04_03_02_increment_expressions.cpp  ch_04_03_03_type_conversions.cpp  ch_04_04_01_01_if_statements.cpp  ch_04_04_01_01_improved.cpp  ch_04_04_01_02_switch_statements.cpp  ch_04_04_02_03_for_loops_01.cpp  ch_04_04_02_03_for_loops_02.cpp  ch_04_05_00_functions_01.cpp  ch_04_05_01_functions_02.cpp  ch_04_06_00_vector_01.cpp  ch_04_06_01_vector_02.cpp  ch_04_06_02_vector_03.cpp  ch_04_06_03_vector_03.cpp
src/ch_05_errors/: CMakeLists.txt  README.md  ch_05_03_03_improper_calls.cpp  ch_05_05_01_exceptions_01.cpp  ch_05_05_02_exceptions_02.cpp  ch_05_06_01_exceptions_03.cpp  ch_05_06_04_exceptions_04_narrow_cast_template.cpp  ch_05_07_logic_errors.cpp  ch_05_09_01_exceptions_05.cpp  ch_05_11_exceptions_06.cpp
src/ch_06_writing_a_program/: CMakeLists.txt  README.md  ch_06_03_01_calc_attempt_01.cpp  ch_06_03_01_calc_attempt_02.cpp  ch_06_03_03_token_01.cpp  ch_06_07_token_stream_01.cpp  ch_06_08_01_token_stream_test_01.cpp  ch_06_08_02_token_stream_test_02.cpp  ch_06_09_token_stream_02.cpp
src/ch_07_completing_a_program/: CMakeLists.txt  README.md  ch_07_02_calc_promp_01.cpp  ch_07_03_calc_improved_error_handling_01.cpp  ch_07_04_calc_unary_operators_01.cpp  ch_07_05_calc_modulus_operator_01.cpp  ch_07_06_01_calc_symbolic_constants.cpp  ch_07_06_02_calc_functions.cpp  ch_07_07_calc_recovery.cpp  ch_07_08_01_calc_declarations.cpp  ch_07_08_02_calc_variables.cpp  ch_07_08_03_calc_predefined_names.cpp
src/ch_08_functions/: CMakeLists.txt  README.md  ch_08_03_function.cpp  ch_08_05_01_args_and_return_types.cpp  ch_08_05_03_pass_by_value.cpp  ch_08_05_05_pass_by_reference_02.cpp  ch_08_05_05_pass_by_reference_03.cpp  ch_08_06_01_order_of_evaluation.cpp  ch_08_07_01_namspaces_01.cpp  ch_08_07_02_namspaces_02.cpp  ch_08_08_namespace_overview.cpp
src/ch_09_classes/: CMakeLists.txt  README.md  ch_09_02_classes_and_members.cpp  ch_09_03_interface_and_implementation.cpp  ch_09_04_03_keep_details_private.cpp  ch_09_04_06_reporting_errors.cpp  ch_09_05_enumerations.cpp  ch_09_06_operator_overloading.cpp  ch_09_07_01_argument_types.cpp  ch_09_07_02_copying.cpp  ch_09_07_03_default_constructors.cpp  ch_09_07_04_const_member_functions.cpp  ch_09_07_05_members_and_helper_functions.cpp  ch_09_08_date_class.cpp
src/ch_10_input_and_output_streams/: CMakeLists.txt  README.md  ch_10_04_input.cpp  ch_10_04_output.cpp  ch_10_05_temperatures_01.cpp  ch_10_06_read_int_01.cpp  ch_10_07_00_read_int_02.cpp  ch_10_07_01_read_int_03.cpp  ch_10_07_01_read_int_04.cpp  ch_10_07_02_read_int_05.cpp  ch_10_08_Date_01.cpp  ch_10_09_Date_02.cpp  ch_10_utils.cpp  ch_10_utils.hpp  infile.txt  temps_infile.txt
src/ch_11_customizing_input_and_output/: CMakeLists.txt  README.md  ch_11_02_01_integer_output.cpp  ch_11_02_02_integer_input.cpp  ch_11_02_03_floating_point_output.cpp  ch_11_02_04_floating_point_precision.cpp  ch_11_02_05_output_field_width.cpp  ch_11_03_01_file_open_modes.cpp  ch_11_03_02_binary_files.cpp  ch_11_03_03_stream_positioning.cpp  ch_11_04_string_streams.cpp  ch_11_05_line_oriented_input.cpp  ch_11_07_using_nonstandard_separators.cpp  positioning.txt  punct_stream.cpp  punct_stream.hpp
src/ch_12_a_display_model/: CMakeLists.txt  README.md  ch_12_03_first_example.cpp  ch_12_07_02_an_almost_blank_window.cpp  ch_12_07_03_01_axis_simple.cpp  ch_12_07_03_02_axis_properties.cpp  ch_12_07_04_graphing_a_function.cpp  ch_12_07_05_polygons.cpp  ch_12_07_06_00_rectangles.cpp  ch_12_07_06_01_poly_rect.cpp  ch_12_07_06_02_more_polyshapes.cpp  ch_12_07_07_fill.cpp  ch_12_07_08_01_text.cpp  ch_12_07_08_02_text_properties.cpp  ch_12_07_09_01_images.cpp  ch_12_07_09_02_image_properties.cpp  ch_12_07_10_more_features.cpp
src/ch_13_graphics_classes/: CMakeLists.txt  README.md  ch_13_02_point_and_line.cpp  ch_13_03_01_lines_object.cpp  ch_13_03_02_grid.cpp  ch_13_04_color.cpp  ch_13_05_01_line_style_dot_grid.cpp  ch_13_05_02_line_style_dash_weighted.cpp  ch_13_05_03_two_lines_colored.cpp  ch_13_06_open_polyline.cpp  ch_13_07_closed_polyline.cpp  ch_13_08_01_improper_polygon.cpp  ch_13_08_02_polygon.cpp  ch_13_09_01_rectangles_01.cpp  ch_13_09_02_rectangles_02.cpp  ch_13_09_03_rectangles_03.cpp  ch_13_09_04_rectangles_04.cpp  ch_13_10_01_unnamed_objects_01.cpp  ch_13_10_02_color_palette.cpp  ch_13_11_text.cpp  ch_13_12_circle.cpp  ch_13_13_ellipse.cpp  ch_13_14_marked_polyline.cpp  ch_13_15_marks.cpp  ch_13_16_mark.cpp  ch_13_17_images.cpp
src/ch_14_graphics_class_design/: CMakeLists.txt  README.md  ch_14_03_03_overriding.cpp
src/ch_15_graphing_functions_and_data/: CMakeLists.txt  README.md  ch_15_02_01_function_graphing_plain.cpp  ch_15_02_02_function_graphing_labels.cpp  ch_15_02_03_function_graphing_notches.cpp  ch_15_02_04_function_graphing_colors.cpp  ch_15_03_02_01_function_graphing_more_examples.cpp  ch_15_03_02_02_function_graphing_log_exp_sin_cos.cpp  ch_15_05_approximation.cpp  ch_15_06_graphing_data.cpp  japanese-age-data.txt
(+285 files in other folders)
