add_library(bookgui "GUI/Graphics.cpp" "GUI/GUI.cpp" "GUI/Simple_window.cpp"
    "GUI/Window.cpp")

add_subdirectory("ch_02_hello_world")
add_subdirectory("ch_03_objects_types_values")
add_subdirectory("ch_04_computation")
add_subdirectory("ch_05_errors")
add_subdirectory("ch_06_writing_a_program")
add_subdirectory("ch_07_completing_a_program")
add_subdirectory("ch_08_functions")
add_subdirectory("ch_09_classes")
add_subdirectory("ch_10_input_and_output_streams")
add_subdirectory("ch_11_customizing_input_and_output")
add_subdirectory("ch_12_a_display_model")
add_subdirectory("ch_13_graphics_classes")
add_subdirectory("ch_14_graphics_class_design")
add_subdirectory("ch_15_graphing_functions_and_data")
add_subdirectory("ch_16_graphical_user_interfaces")
add_subdirectory("ch_17_vector_and_free_store")
add_subdirectory("ch_18_vectors_and_arrays")
add_subdirectory("ch_19_vector_templates_and_exceptions")
add_subdirectory("ch_20_containers_and_iterators")
add_subdirectory("ch_21_algorithms_and_maps")
add_subdirectory("ch_23_text_manipulation")

