add_executable(ch_03_01_string_io ch_03_01_string_io.cpp)

add_executable(ch_03_02_type_io ch_03_02_type_io.cpp)

add_executable(ch_03_03_01_formatted_io ch_03_03_01_formatted_io.cpp)

add_executable(ch_03_03_02_formatted_io ch_03_03_02_formatted_io.cpp)

add_executable(ch_03_03_03_formatted_io ch_03_03_03_formatted_io.cpp)

add_executable(ch_03_04_00_string_concatenation
               ch_03_04_00_string_concatenation.cpp)

add_executable(ch_03_04_01_string_comparison ch_03_04_01_string_comparison.cpp)

add_executable(ch_03_04_02_string_concatenation
               ch_03_04_02_string_concatenation.cpp)

add_executable(ch_03_04_03_floating_point_io ch_03_04_03_floating_point_io.cpp)

add_executable(ch_03_05_00_assignment_and_initialization
               ch_03_05_00_assignment_and_initialization.cpp)

add_executable(ch_03_05_01_detect_repeated_words
               ch_03_05_01_detect_repeated_words.cpp)

add_executable(ch_03_06_01_find_repeated_words
               ch_03_06_01_find_repeated_words.cpp)

add_executable(ch_03_07_names ch_03_07_names.cpp)

add_executable(ch_03_08_types_and_objects ch_03_08_types_and_objects.cpp)

add_executable(ch_03_09_01_safe_conversions ch_03_09_01_safe_conversions.cpp)
target_compile_definitions(ch_03_09_01_safe_conversions PRIVATE -DERR_OUT)

add_executable(ch_03_09_02_01_unsafe_conversions
               ch_03_09_02_01_unsafe_conversions.cpp)

add_executable(ch_03_09_02_02_unsafe_conversions
               ch_03_09_02_02_unsafe_conversions.cpp)

