add_executable(ch_04_03_00_int_expressions ch_04_03_00_int_expressions.cpp)

add_executable(ch_04_03_01_const_and_constexp
               ch_04_03_01_const_and_constexp.cpp)

add_executable(ch_04_03_02_increment_expressions
               ch_04_03_02_increment_expressions.cpp)

add_executable(ch_04_03_03_type_conversions ch_04_03_03_type_conversions.cpp)

add_executable(ch_04_04_01_01_if_statements ch_04_04_01_01_if_statements.cpp)

add_executable(ch_04_04_01_01_improved ch_04_04_01_01_improved.cpp)

add_executable(ch_04_04_01_02_switch_statements
               ch_04_04_01_02_switch_statements.cpp)

add_executable(ch_04_04_02_03_for_loops_01 ch_04_04_02_03_for_loops_01.cpp)

add_executable(ch_04_04_02_03_for_loops_02 ch_04_04_02_03_for_loops_02.cpp)

add_executable(ch_04_05_00_functions_01 ch_04_05_00_functions_01.cpp)

add_executable(ch_04_05_01_functions_02 ch_04_05_01_functions_02.cpp)

add_executable(ch_04_06_00_vector_01 ch_04_06_00_vector_01.cpp)

add_executable(ch_04_06_01_vector_02 ch_04_06_01_vector_02.cpp)

add_executable(ch_04_06_02_vector_03 ch_04_06_02_vector_03.cpp)

add_executable(ch_04_06_03_vector_03 ch_04_06_03_vector_03.cpp)
