add_executable(ch_08_03_function ch_08_03_function.cpp)

add_executable(ch_08_05_01_args_and_return_types
               ch_08_05_01_args_and_return_types.cpp)

add_executable(ch_08_05_03_pass_by_value ch_08_05_03_pass_by_value.cpp)

add_executable(ch_08_05_05_pass_by_reference_02
               ch_08_05_05_pass_by_reference_02.cpp)

add_executable(ch_08_05_05_pass_by_reference_03
               ch_08_05_05_pass_by_reference_03.cpp)

add_executable(ch_08_06_01_order_of_evaluation
               ch_08_06_01_order_of_evaluation.cpp)

add_executable(ch_08_07_01_namspaces_01 ch_08_07_01_namspaces_01.cpp)

add_executable(ch_08_07_02_namspaces_02 ch_08_07_02_namspaces_02.cpp)

add_executable(ch_08_08_namespace_overview ch_08_08_namespace_overview.cpp)
